--- a/mw_tour.html
+++ b/mw_tour.html
@@ -15,6 +15,8 @@
    <meta charset="utf-8" />
    <title>Bike the Mountains Tour</title>
 
+   <link rel="stylesheet" href="mw_styles.css" />
+   <link rel="stylesheet" href="mw_layout.css" />
 </head>
 
 
